<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hangio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.hangio.ui.myprofile.MyProfileFragment"
        android:label="@string/menu_my_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_attending_events"
        android:name="com.example.hangio.ui.attendingevents.AttendingEventsFragment"
        android:label="@string/menu_attending_events"
        tools:layout="@layout/fragment_attending_events" />

    <fragment
        android:id="@+id/nav_created_events"
        android:name="com.example.hangio.ui.createdevents.CreatedEventsFragment"
        android:label="@string/menu_created_events"
        tools:layout="@layout/fragment_created_events" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.hangio.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.hangio.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>