<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/language_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:clickable="false"
        android:text="@string/language"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notifications_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:text="@string/notifications"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_txt" />

    <Switch
        android:id="@+id/notifications_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/notifications_txt"
        app:layout_constraintStart_toEndOf="@+id/notifications_txt" />

    <Button
        android:id="@+id/terms_btn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:text="@string/privacy"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications_txt" />

    <Button
        android:id="@+id/privacy_policy_btn"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/terms"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terms_btn" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="123dp"
        app:layout_constraintStart_toEndOf="@+id/language_txt"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>